{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 228,
  "lineage": "d724ac69-02e8-3c4a-d76b-9d52ea78e104",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b89f7b3f054b957e",
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:instance/i-085cd3a308c874452",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085cd3a308c874452",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb69f53d8570122a",
            "private_dns": "ip-192-168-4-21.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.21",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e23307ac95deb58d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d26d2dbb3bbd9e4c",
            "tags": {
              "Name": "My Private Instance"
            },
            "tags_all": {
              "Name": "My Private Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c3c70823f3f46cd"
            ]
          },
          "dependencies": [
            "aws_security_group.demosg",
            "aws_subnet.demosubnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:internet-gateway/igw-0af52facd3de02cff",
            "id": "igw-0af52facd3de02cff",
            "owner_id": "963240507819",
            "tags": {
              "Name": "demo-gateway"
            },
            "tags_all": {
              "Name": "demo-gateway"
            },
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:route-table/rtb-002603435228147f9",
            "id": "rtb-002603435228147f9",
            "owner_id": "963240507819",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af52facd3de02cff",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "tags_all": {
              "Name": "Public Subnet Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:route-table/rtb-06cd62ec73c0a5a30",
            "id": "rtb-06cd62ec73c0a5a30",
            "owner_id": "963240507819",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Route Table for the Private Subnet"
            },
            "tags_all": {
              "Name": "Route Table for the Private Subnet"
            },
            "timeouts": null,
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f56e39e470dab78e",
            "route_table_id": "rtb-06cd62ec73c0a5a30",
            "subnet_id": "subnet-01c72b6bfba83b4b8"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.demosubnet1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080948e2f901c937",
            "route_table_id": "rtb-06cd62ec73c0a5a30",
            "subnet_id": "subnet-0d26d2dbb3bbd9e4c"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_subnet.demosubnet2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093f329dd4958752b",
            "route_table_id": "rtb-002603435228147f9",
            "subnet_id": "subnet-029d153b67911624d"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.rt",
            "aws_subnet.Public_demosubnet-1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0348d8adc5723c43f",
            "route_table_id": "rtb-002603435228147f9",
            "subnet_id": "subnet-009858403ea9eea91"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.rt",
            "aws_subnet.Public_demosubnet-2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demosg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:security-group/sg-08c3c70823f3f46cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c3c70823f3f46cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220907212106502400000002",
            "name_prefix": "terraform-",
            "owner_id": "963240507819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_demosubnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:subnet/subnet-029d153b67911624d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029d153b67911624d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "963240507819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public demosubnet-1"
            },
            "tags_all": {
              "Name": "Public demosubnet-1"
            },
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_demosubnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:subnet/subnet-009858403ea9eea91",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009858403ea9eea91",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "963240507819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_demosubnet-2"
            },
            "tags_all": {
              "Name": "Public_demosubnet-2"
            },
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demosubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:subnet/subnet-01c72b6bfba83b4b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c72b6bfba83b4b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963240507819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet one"
            },
            "tags_all": {
              "Name": "Private Subnet one"
            },
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demosubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:subnet/subnet-0d26d2dbb3bbd9e4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d26d2dbb3bbd9e4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "963240507819",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet two"
            },
            "tags_all": {
              "Name": "Private Subnet two"
            },
            "vpc_id": "vpc-038e8013da6499e29"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:963240507819:vpc/vpc-038e8013da6499e29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05dd7f7e15e5bb2ba",
            "default_route_table_id": "rtb-09af801437ebdf8ae",
            "default_security_group_id": "sg-04390eae5d1b89038",
            "dhcp_options_id": "dopt-0186400134a412627",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-038e8013da6499e29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09af801437ebdf8ae",
            "owner_id": "963240507819",
            "tags": {
              "Name": "Terraform VPC"
            },
            "tags_all": {
              "Name": "Terraform VPC"
            }
          }
        }
      ]
    }
  ]
}